# ComputerGraphics_Assignment2

./: .gitignore  CMakeLists.txt  Constants.hpp  OGL_Log.txt  README.md  main.cpp
Documentation/: Doxyfile  MAIN_PAGE.md
OGL_Implementation/: Camera.cpp  Camera.hpp  Entity.cpp  Entity.hpp  GUI.cpp  GUI.hpp  Mesh.cpp  Mesh.hpp  Obj.cpp  Obj.hpp  OpenGL_Timer.hpp  Quaternion.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp
OGL_Implementation/DebugInfo/: Log.hpp
OGL_Implementation/Entity/: Entity.cpp  Entity.hpp  Entity_Skeleton.hpp  Entity_Skeleton.inl
OGL_Implementation/Light/: Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp
OGL_Implementation/Mesh/: Geometry.hpp  Mesh.cpp  Mesh.hpp  Mesh_Base.cpp  Mesh_Base.hpp  Mesh_Obj.cpp  Mesh_Obj.hpp  Mesh_Sphere.cpp  Mesh_Sphere.hpp
OGL_Implementation/Rendering/: Rendering.cpp  Rendering.hpp
OGL_Implementation/Shader/: Shader.cpp  Shader.hpp  Shader_Base.cpp  Shader_Base.hpp
OGL_Implementation/Text/: Font.cpp  Font.hpp  Font_Base.cpp  Font_Base.hpp  Text.cpp  Text.hpp
docs/html/: index.html
lib/: CMakeLists.txt
resources/: face.frag.glsl  face.vert.glsl  point.vert.glsl  wireframe.vert.glsl
resources/Shaders/: face.frag.glsl  face.vert.glsl  text3D.vert.glsl
